# llm-gateway

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASES_COMPLETE.md  PROJECT_ANALYSIS.md  README.md  README_CN.md  SESSION_SUMMARY.md  STATS_ENHANCEMENT_SUMMARY.md  STATS_TESTING_REPORT.md  STRESS_TESTS_DELIVERY.md  THINKING_FIELD_FIX.md  analyze_conversations.py  analyze_logs.py  config.toml.example
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Cargo.toml  Cross.toml  config.toml.example  test_body_logging.sh  test_oauth_config.toml  test_oauth_url.sh  test_simple_mode.sh
backend/benches/: conversion_bench.rs  load_balancer_bench.rs
backend/docs/: DAEMON.md  FEATURES.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  OAUTH_FIX_SUMMARY.md  OAUTH_QUICKSTART.md  body_logging_completion_report.md  body_logging_implementation.md  conversation_analysis_2026-02-03.md  quota.md  simple_mode_completion_summary.md  simple_mode_quick_reference.md
backend/migrations/: 20260101000000_init.sql  20260119000002_add_timeseries_tables.sql  20260120000001_create_requests_table.sql  20260121000001_add_cache_token_columns.sql  20260121000002_drop_unused_tables.sql  20260122000001_add_config_tables.sql  20260203000001_create_quota_snapshots_table.sql  20260204000001_create_model_prices_table.sql  20260204000002_add_cost_columns_to_requests.sql  20260204000003_create_pricing_metadata_table.sql  20260209000001_create_failover_events_table.sql  20260214000000_add_session_id.sql
backend/scripts/: log_analysis_report.py
backend/src/: auth.rs  auth_utils.rs  cli.rs  config.rs  config_db.rs  conversion_warnings.rs  daemon.rs  error.rs  image_utils.rs  lib.rs  load_balancer.rs  logging.rs  main.rs  metrics.rs  pid.rs  provider_config.rs  provider_trait.rs  registry.rs  retry.rs  router.rs  server.rs  server.rs.bak  session.rs  signals.rs  signals.rs.bak  static_files.rs  streaming.rs
backend/src/commands/: config.rs  mod.rs  oauth.rs  reload.rs  start.rs  stats.rs  stop.rs  test.rs
backend/src/converters/: anthropic_response.rs  gemini_response.rs  gemini_streaming.rs  openai_to_anthropic.rs  openai_to_gemini.rs
backend/src/handlers/: azure.rs  bedrock.rs  chat_completions.rs  common.rs  config_api.rs  custom.rs  dashboard_api.rs  gemini_native.rs  health.rs  messages.rs  mod.rs  models.rs  openai_responses.rs
backend/src/models/: anthropic.rs  gemini.rs  openai.rs
backend/src/oauth/: callback_server.rs  manager.rs  mod.rs  pkce.rs  refresh.rs  token_store.rs  types.rs
backend/src/oauth/providers/: anthropic.rs  google.rs  mod.rs  traits.rs
backend/src/observability/: cleanup.rs  metrics_snapshot.rs  mod.rs  request_logger.rs
backend/src/pricing/: calculator.rs  loader.rs  mod.rs  models.rs  service.rs  updater.rs
backend/src/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  custom.rs  gemini.rs  mod.rs  openai.rs  openai_responses.rs
backend/src/quota/: db.rs  mod.rs  refresher.rs  types.rs
backend/src/quota/providers/: anthropic.rs  mod.rs
backend/tests/: STRESS_TESTS_IMPLEMENTATION.md  oauth_integration_test.rs  oauth_url_test.rs  stress_scenarios.rs  test_config_loading.rs
backend/tests/integration/helpers/: metrics.rs  mod.rs  test_config.rs
backend/tests/integration/mocks/: anthropic_mock.rs  mod.rs  openai_mock.rs
backend/tests/stress/: QUICKSTART.md  README.md  run_stress_tests.sh
data/: observability.db  observability.db-shm  observability.db-wal
docs/: CONVERSION_LIMITATIONS.md  DEVELOPMENT.md  IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  body_logging_quick_reference.md  simple_mode_implementation.md
examples/: caching_example.rs  install-macos.sh  json_mode_example.rs  llm-gateway.plist  tool_calling_example.rs  vision_example.rs
frontend/: .env.development  .env.production  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  config.ts  dashboard.ts  logs.ts  traces.ts
frontend/src/assets/styles/: main.css
frontend/src/components/common/: AppHeader.vue  MainLayout.vue
frontend/src/components/config/: ApiKeysList.vue  CreateApiKeyModal.vue  CreateProviderInstanceModal.vue  CreateRoutingRuleModal.vue  ProviderInstancesList.vue  RoutingRulesList.vue
frontend/src/components/dashboard/: InstanceHealth.vue  InstanceHealthTimeseries.vue  MetricsCard.vue  ModelStatsTable.vue  ProviderHealthChart.vue  ProviderHealthTable.vue  RequestsChart.vue  SummaryCards.vue  TokenUsageByApiKey.vue  TokenUsageByInstance.vue  TokenUsageTimeseries.vue
frontend/src/components/trace/: TraceTimeline.vue  TraceTree.vue
frontend/src/composables/: useChartConfig.ts  usePolling.ts
frontend/src/router/: index.ts
frontend/src/stores/: logs.ts  metrics.ts  traces.ts
frontend/src/utils/: chart.ts
frontend/src/views/: ConfigManagement.vue  Dashboard.vue  Logs.vue  Settings.vue  TraceDetail.vue  Traces.vue
migrations/: 20260108000001_init.sql
scripts/: build-linux.sh
src/: auth.rs  cli.rs  config.rs  daemon.rs  error.rs  image_utils.rs  lib.rs  load_balancer.rs  logging.rs  main.rs  metrics.rs  pid.rs  retry.rs  router.rs  router.rs.bak  server.rs  signals.rs  streaming.rs
src/commands/: config.rs  logs.rs  mod.rs  observability.rs  reload.rs  start.rs  stats.rs  stop.rs  test.rs  trace.rs
src/converters/: anthropic_response.rs  gemini_response.rs  mod.rs  openai_to_anthropic.rs  openai_to_gemini.rs
src/handlers/: analyze.rs  chat_completions.rs  messages.rs  metrics_handler.rs  mod.rs  models.rs  models.rs.bak  observability_api.rs
src/models/: anthropic.rs  gemini.rs  openai.rs
src/observability/: cleanup.rs  database.rs  layer.rs  metrics_snapshot.rs  mod.rs  query.rs  query_dsl.rs  span.rs  writer.rs
src/providers/: anthropic.rs  gemini.rs  openai.rs
src/stats/: fetcher.rs  histogram.rs  mod.rs  observability_data.rs  parser.rs  ui.rs
tests/: caching_tests.rs  json_mode_tests.rs  multimodal_tests.rs  tool_calling_tests.rs
