[package]
name = "llm-gateway"
version = "0.3.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP 客户端
# 使用 rustls 替代 native-tls，消除 OpenSSL 交叉编译问题
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",      # 纯 Rust SSL 实现，完全跨平台
    "cookies",         # Cookie 支持
] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"

# 配置管理
config = "0.14"

# CLI and Process Management
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
comfy-table = "7.1"
daemonize = "0.5"
fs2 = "0.4"
arc-swap = "1.7"
nix = { version = "0.27", features = ["signal"] }

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# SQLite 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# Token 计数
tiktoken-rs = "0.5"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 异步流处理
futures = "0.3"
futures-util = "0.3"

# 并发数据结构和随机
dashmap = "6.0"
rand = "0.8"

# SSE
eventsource-stream = "0.2"

# 静态文件嵌入（用于 Dashboard）
rust-embed = { version = "8.0", features = ["include-exclude"] }
mime_guess = "2.0"

# 其他
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
httpmock = "0.8"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "load_balancer_bench"
harness = false

[[bench]]
name = "conversion_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
